[tool.poetry]
name = "covid19-cases"
version = "0.1.0"
description = ""
authors = ["ssungs <asdf4651@naver.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
Flask = "^1.1.2"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.2"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
